# rag-playground

./: .env.example  .gitignore  LICENSE  QUESTS.md  README.md  claude-glm-once.sh  pyproject.toml
data/eval/: golden_set.json  results.json
data/raw/: busan_libraries.json
docs/: quest-7-agentic-rag-plan.md
src/rag_playground/: __init__.py  config.py  main.py
src/rag_playground/adapters/: __init__.py
src/rag_playground/adapters/data_go_kr/: __init__.py  client.py  library.py
src/rag_playground/adapters/llm/: __init__.py  openai_chat.py
src/rag_playground/adapters/query_rewriter/: openai_rewriter.py
src/rag_playground/adapters/reranker/: novita.py
src/rag_playground/adapters/vectorstore/: __init__.py  qdrant.py
src/rag_playground/app/: __init__.py  cli.py
src/rag_playground/application/: __init__.py  agentic.py  answer.py  compare.py  index.py  ingest.py  sources.py
src/rag_playground/config/: __init__.py  settings.py
src/rag_playground/data/: __init__.py  collect_family_card.py  family_card_api.py
src/rag_playground/domain/: __init__.py  agent.py  document.py
src/rag_playground/evaluation/: dataset.py  metrics.py  runner.py
src/rag_playground/rag/: __init__.py  chain.py  chunker.py  index.py  vectorstore.py
tests/: test_agentic.py  test_evaluation.py
